// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Delete Modal component > renders basic modal 1`] = `
<body>
  <div />
  <div
    class="_modal-backdrop_inusz_22"
    data-part="backdrop"
    data-scope="dialog"
    data-state="open"
    dir="ltr"
    id="dialog::r0::backdrop"
  />
  <div
    class="_modal-positioner_inusz_29"
    data-part="positioner"
    data-scope="dialog"
    dir="ltr"
    id="dialog::r0::positioner"
  >
    <div
      aria-describedby="dialog::r0::description"
      aria-labelledby="dialog::r0::title"
      aria-modal="true"
      class="_modal-content_inusz_35"
      data-part="content"
      data-scope="dialog"
      data-state="open"
      dir="ltr"
      id="dialog::r0::content"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="_modal-header_1q85x_2 _modal-header--critical_1q85x_14"
      >
        <button
          class="_button_10f3x_2 _button--neutral_10f3x_82 _button--xs_10f3x_25 _button--ghost_10f3x_150"
          data-part="close-trigger"
          data-scope="dialog"
          dir="ltr"
          id="dialog::r0::close"
          type="button"
        >
          <span
            class="_icon_i4xp0_2 _icon--xmark_i4xp0_442"
          />
        </button>
      </div>
      <div
        class="_modal-body_3om6u_2 text-left"
      >
        <h4
          class="_text--heading-4_1aw48_31 mb-4"
        >
          Résilier serviceType ?
        </h4>
        <div
          class="flex flex-col text-left"
        >
          <div
            class="flex flex-col gap-4"
          >
            <p
              class="_text--paragraph_1aw48_54"
              data-testid="manager-delete-modal-description"
              id="delete-modal-description"
            >
              La résiliation de votre service effacera définitivement toutes les données correspondantes. Souhaitez-vous procéder à la résiliation de votre service ?
            </p>
          </div>
        </div>
        <div
          class="flex justify-end flex-wrap gap-4"
        >
          <button
            class="_button_10f3x_2 _button--critical_10f3x_48 _button--md_10f3x_41 _button--ghost_10f3x_150 mt-4"
            data-testid="manager-delete-modal-cancel"
            type="button"
          >
            Non, refuser
          </button>
          <button
            class="_button_10f3x_2 _button--critical_10f3x_48 _button--md_10f3x_41 _button--default_10f3x_48 mt-4"
            data-testid="manager-delete-modal-confirm"
            type="button"
          >
            Oui, résilier
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Delete Modal component > renders loading modal 1`] = `
<body>
  <div />
  <div
    class="_modal-backdrop_inusz_22"
    data-part="backdrop"
    data-scope="dialog"
    data-state="open"
    dir="ltr"
    id="dialog::r1::backdrop"
  />
  <div
    class="_modal-positioner_inusz_29"
    data-part="positioner"
    data-scope="dialog"
    dir="ltr"
    id="dialog::r1::positioner"
  >
    <div
      aria-describedby="dialog::r1::description"
      aria-labelledby="dialog::r1::title"
      aria-modal="true"
      class="_modal-content_inusz_35"
      data-part="content"
      data-scope="dialog"
      data-state="open"
      dir="ltr"
      id="dialog::r1::content"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="_modal-header_1q85x_2 _modal-header--critical_1q85x_14"
      >
        <button
          class="_button_10f3x_2 _button--neutral_10f3x_82 _button--xs_10f3x_25 _button--ghost_10f3x_150"
          data-part="close-trigger"
          data-scope="dialog"
          dir="ltr"
          id="dialog::r1::close"
          type="button"
        >
          <span
            class="_icon_i4xp0_2 _icon--xmark_i4xp0_442"
          />
        </button>
      </div>
      <div
        class="_modal-body_3om6u_2 text-left"
      >
        <h4
          class="_text--heading-4_1aw48_31 mb-4"
        >
          Résilier serviceType ?
        </h4>
        <div
          class="flex justify-center my-5"
          data-testid="spinner"
        >
          <span
            class="_spinner_o7c7y_10 _spinner--primary_o7c7y_29 _spinner--md_o7c7y_20"
            role="progressbar"
          >
            <svg
              class="_spinner__svg_o7c7y_32"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="none"
                height="24"
                width="24"
              />
              <g
                transform="translate(-237.694 -93.932)"
              >
                <path
                  d="M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z"
                  transform="translate(5486 4225)"
                />
                <circle
                  cx="1"
                  cy="1"
                  r="1"
                  transform="translate(248.694 114.932)"
                />
                <circle
                  cx="1"
                  cy="1"
                  r="1"
                  transform="translate(238.694 104.932)"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Delete Modal component > renders modal with children content 1`] = `
<body>
  <div />
  <div
    class="_modal-backdrop_inusz_22"
    data-part="backdrop"
    data-scope="dialog"
    data-state="open"
    dir="ltr"
    id="dialog::r4::backdrop"
  />
  <div
    class="_modal-positioner_inusz_29"
    data-part="positioner"
    data-scope="dialog"
    dir="ltr"
    id="dialog::r4::positioner"
  >
    <div
      aria-describedby="dialog::r4::description"
      aria-labelledby="dialog::r4::title"
      aria-modal="true"
      class="_modal-content_inusz_35"
      data-part="content"
      data-scope="dialog"
      data-state="open"
      dir="ltr"
      id="dialog::r4::content"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="_modal-header_1q85x_2 _modal-header--critical_1q85x_14"
      >
        <button
          class="_button_10f3x_2 _button--neutral_10f3x_82 _button--xs_10f3x_25 _button--ghost_10f3x_150"
          data-part="close-trigger"
          data-scope="dialog"
          dir="ltr"
          id="dialog::r4::close"
          type="button"
        >
          <span
            class="_icon_i4xp0_2 _icon--xmark_i4xp0_442"
          />
        </button>
      </div>
      <div
        class="_modal-body_3om6u_2 text-left"
      >
        <h4
          class="_text--heading-4_1aw48_31 mb-4"
        >
          Résilier serviceType ?
        </h4>
        <div
          class="flex flex-col text-left"
        >
          <div
            class="flex flex-col gap-4"
          >
            <p
              class="_text--paragraph_1aw48_54"
              data-testid="manager-delete-modal-description"
              id="delete-modal-description"
            >
              La résiliation de votre service effacera définitivement toutes les données correspondantes. Souhaitez-vous procéder à la résiliation de votre service ?
            </p>
            <div>
              Additional content
            </div>
          </div>
        </div>
        <div
          class="flex justify-end flex-wrap gap-4"
        >
          <button
            class="_button_10f3x_2 _button--critical_10f3x_48 _button--md_10f3x_41 _button--ghost_10f3x_150 mt-4"
            data-testid="manager-delete-modal-cancel"
            type="button"
          >
            Non, refuser
          </button>
          <button
            class="_button_10f3x_2 _button--critical_10f3x_48 _button--md_10f3x_41 _button--default_10f3x_48 mt-4"
            data-testid="manager-delete-modal-confirm"
            type="button"
          >
            Oui, résilier
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Delete Modal component > renders modal with custom service type 1`] = `
<body>
  <div />
  <div
    class="_modal-backdrop_inusz_22"
    data-part="backdrop"
    data-scope="dialog"
    data-state="open"
    dir="ltr"
    id="dialog::r3::backdrop"
  />
  <div
    class="_modal-positioner_inusz_29"
    data-part="positioner"
    data-scope="dialog"
    dir="ltr"
    id="dialog::r3::positioner"
  >
    <div
      aria-describedby="dialog::r3::description"
      aria-labelledby="dialog::r3::title"
      aria-modal="true"
      class="_modal-content_inusz_35"
      data-part="content"
      data-scope="dialog"
      data-state="open"
      dir="ltr"
      id="dialog::r3::content"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="_modal-header_1q85x_2 _modal-header--critical_1q85x_14"
      >
        <button
          class="_button_10f3x_2 _button--neutral_10f3x_82 _button--xs_10f3x_25 _button--ghost_10f3x_150"
          data-part="close-trigger"
          data-scope="dialog"
          dir="ltr"
          id="dialog::r3::close"
          type="button"
        >
          <span
            class="_icon_i4xp0_2 _icon--xmark_i4xp0_442"
          />
        </button>
      </div>
      <div
        class="_modal-body_3om6u_2 text-left"
      >
        <h4
          class="_text--heading-4_1aw48_31 mb-4"
        >
          Résilier Custom Service ?
        </h4>
        <div
          class="flex flex-col text-left"
        >
          <div
            class="flex flex-col gap-4"
          >
            <p
              class="_text--paragraph_1aw48_54"
              data-testid="manager-delete-modal-description"
              id="delete-modal-description"
            >
              La résiliation de votre service effacera définitivement toutes les données correspondantes. Souhaitez-vous procéder à la résiliation de votre service ?
            </p>
          </div>
        </div>
        <div
          class="flex justify-end flex-wrap gap-4"
        >
          <button
            class="_button_10f3x_2 _button--critical_10f3x_48 _button--md_10f3x_41 _button--ghost_10f3x_150 mt-4"
            data-testid="manager-delete-modal-cancel"
            type="button"
          >
            Non, refuser
          </button>
          <button
            class="_button_10f3x_2 _button--critical_10f3x_48 _button--md_10f3x_41 _button--default_10f3x_48 mt-4"
            data-testid="manager-delete-modal-confirm"
            type="button"
          >
            Oui, résilier
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Delete Modal component > renders modal with error 1`] = `
<body>
  <div />
  <div
    class="_modal-backdrop_inusz_22"
    data-part="backdrop"
    data-scope="dialog"
    data-state="open"
    dir="ltr"
    id="dialog::r2::backdrop"
  />
  <div
    class="_modal-positioner_inusz_29"
    data-part="positioner"
    data-scope="dialog"
    dir="ltr"
    id="dialog::r2::positioner"
  >
    <div
      aria-describedby="dialog::r2::description"
      aria-labelledby="dialog::r2::title"
      aria-modal="true"
      class="_modal-content_inusz_35"
      data-part="content"
      data-scope="dialog"
      data-state="open"
      dir="ltr"
      id="dialog::r2::content"
      role="dialog"
      tabindex="-1"
    >
      <div
        class="_modal-header_1q85x_2 _modal-header--critical_1q85x_14"
      >
        <button
          class="_button_10f3x_2 _button--neutral_10f3x_82 _button--xs_10f3x_25 _button--ghost_10f3x_150"
          data-part="close-trigger"
          data-scope="dialog"
          dir="ltr"
          id="dialog::r2::close"
          type="button"
        >
          <span
            class="_icon_i4xp0_2 _icon--xmark_i4xp0_442"
          />
        </button>
      </div>
      <div
        class="_modal-body_3om6u_2 text-left"
      >
        <h4
          class="_text--heading-4_1aw48_31 mb-4"
        >
          Résilier serviceType ?
        </h4>
        <div
          class="flex flex-col text-left"
        >
          <div
            class="flex flex-col gap-4"
          >
            <div
              class="_message_udq9t_2 _message--warning_udq9t_29 _message--default_udq9t_9"
            >
              <span
                class="_icon_i4xp0_2 _icon--triangle-exclamation_i4xp0_421 _message-icon_mpgx8_2"
              />
              <div
                class="_message-body_fe7x3_2"
              >
                L'erreur suivante est survenue : Test error message.
              </div>
              <button
                class="_button_10f3x_2 _button--neutral_10f3x_82 _button--xs_10f3x_25 _button--ghost_10f3x_150 _message__close_udq9t_57"
                type="button"
              >
                <span
                  class="_icon_i4xp0_2 _icon--xmark_i4xp0_442"
                />
              </button>
            </div>
            <p
              class="_text--paragraph_1aw48_54"
              data-testid="manager-delete-modal-description"
              id="delete-modal-description"
            >
              La résiliation de votre service effacera définitivement toutes les données correspondantes. Souhaitez-vous procéder à la résiliation de votre service ?
            </p>
          </div>
        </div>
        <div
          class="flex justify-end flex-wrap gap-4"
        >
          <button
            class="_button_10f3x_2 _button--critical_10f3x_48 _button--md_10f3x_41 _button--ghost_10f3x_150 mt-4"
            data-testid="manager-delete-modal-cancel"
            type="button"
          >
            Non, refuser
          </button>
          <button
            class="_button_10f3x_2 _button--critical_10f3x_48 _button--md_10f3x_41 _button--default_10f3x_48 mt-4"
            data-testid="manager-delete-modal-confirm"
            type="button"
          >
            Oui, résilier
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
